Completed and fixed index.html structure

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         }
         
         .testimonial-card:before {
-            content: "\\201C";
+            content: "";
             font-size: 80px;
             position: absolute;
             top: -20px;
