Fixed image paths and folder names

--- a/blog.html
+++ b/blog.html
@@ -734,7 +734,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="../images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
+                <img src=".//images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
                 <h1>Shepherd Court Publishing</h1>
             </div>
             <div class="mobile-menu">☰</div>
@@ -839,14 +839,14 @@
                     <!-- Featured Post -->
                     <div class="featured-post">
                         <div class="featured-image">
-                            <img src="../images/S.C/black-yellow-hardback-book.jpg" alt="Featured Post Image">
+                            <img src=".//images/S.C/black-yellow-hardback-book.jpg" alt="Featured Post Image">
                         </div>
                         <div class="featured-content">
                             <span class="featured-label">Featured Article</span>
                             <h2 class="featured-title">5 Essential Steps to Prepare Your Manuscript for Publication</h2>
                             <div class="featured-meta">
                                 <div class="featured-author">
-                                    <img src="../images/S.C/SC 4.JPG" alt="Author Avatar">
+                                    <img src=".//images/S.C/SC 4.JPG" alt="Author Avatar">
                                     <span>By Michael Court</span>
                                 </div>
                                 <div class="featured-date">April 15, 2025</div>
@@ -861,7 +861,7 @@
                         <!-- Article 1 -->
                         <div class="article-card">
                             <div class="article-image">
-                                <img src="/images/S.C/SC 2.JPG" alt="Article Image">
+                                <img src="./images/S.C/SC 3.JPG" alt="Article Image">
                             </div>
                             <div class="article-content">
                                 <span class="article-tag writing">Writing Tips</span>
@@ -875,7 +875,7 @@
                         <!-- Article 2 -->
                         <div class="article-card">
                             <div class="article-image">
-                                <img src="../images/S.C/red-hardcover-book-front-cover.jpg" alt="Article Image">
+                                <img src=".//images/S.C/red-hardcover-book-front-cover.jpg" alt="Article Image">
                             </div>
                             <div class="article-content">
                                 <span class="article-tag">Publishing</span>
@@ -889,7 +889,7 @@
                         <!-- Article 3 -->
                         <div class="article-card">
                             <div class="article-image">
-                                <img src="../images/S.C/SC 2.JPG" alt="Article Image">
+                                <img src=".//images/S.C/SC 2.JPG" alt="Article Image">
                             </div>
                             <div class="article-content">
                                 <span class="article-tag marketing">Marketing</span>
@@ -903,7 +903,7 @@
                         <!-- Article 4 -->
                         <div class="article-card">
                             <div class="article-image">
-                                <img src="/api/placeholder/400/200" alt="Article Image">
+                                <img src="./images/S.C/red-hardcover-book-front-cover.jpg" alt="Article Image">
                             </div>
                             <div class="article-content">
                                 <span class="article-tag industry">Industry News</span>
@@ -917,7 +917,7 @@
                         <!-- Article 5 -->
                         <div class="article-card">
                             <div class="article-image">
-                                <img src="/api/placeholder/400/200" alt="Article Image">
+                                <img src="./images/S.C/SC 1.JPG" alt="Article Image">
                             </div>
                             <div class="article-content">
                                 <span class="article-tag writing">Writing Tips</span>
@@ -931,7 +931,7 @@
                         <!-- Article 6 -->
                         <div class="article-card">
                             <div class="article-image">
-                                <img src="/api/placeholder/400/200" alt="Article Image">
+                                <img src="./images/S.C/SC 4.JPG" alt="Article Image">
                             </div>
                             <div class="article-content">
                                 <span class="article-tag">Publishing</span>
