--- a/books.html
+++ b/books.html
@@ -202,7 +202,7 @@
         
         /* Page Banner */
         .page-banner {
-            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('./../images/S.C/library-with-books.jpg') center/cover no-repeat;
+            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('././/images/S.C/library-with-books.jpg') center/cover no-repeat;
             color: white;
             text-align: center;
             padding: 60px 0;
@@ -558,7 +558,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="../images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
+                <img src=".//images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
                 <h1>Shepherd Court Publishing</h1>
             </div>
             <div class="mobile-menu">☰</div>
@@ -659,7 +659,7 @@
                 <!-- Publication 1 -->
                 <div class="publication-card">
                     <div class="publication-cover">
-                        <img src="../images/S.C/dynamics.jpg" alt="Book Cover - The Dynamics Of Life Storm">
+                        <img src=".//images/S.C/dynamics.jpg" alt="Book Cover - The Dynamics Of Life Storm">
                     </div>
                     <div class="publication-info">
                         <span class="publication-type">Book</span>
@@ -676,7 +676,7 @@
                 <!-- Publication 2 -->
                 <div class="publication-card">
                     <div class="publication-cover">
-                        <img src="../images/S.C/SC 2.JPG" alt="Book Cover - Beyond the Horizon">
+                        <img src=".//images/S.C/SC 2.JPG" alt="Book Cover - Beyond the Horizon">
                     </div>
                     <div class="publication-info">
                         <span class="publication-type">Book</span>
@@ -693,7 +693,7 @@
                 <!-- Publication 3 -->
                 <div class="publication-card">
                     <div class="publication-cover">
-                        <img src="../images/S.C/SC 3.JPG" alt="Book Cover - Quantum Theory Journal">
+                        <img src=".//images/S.C/SC 3.JPG" alt="Book Cover - Quantum Theory Journal">
                     </div>
                     <div class="publication-info">
                         <span class="publication-type journal">Journal</span>
@@ -710,7 +710,7 @@
                 <!-- Publication 4 -->
                 <div class="publication-card">
                     <div class="publication-cover">
-                        <img src="../images/S.C/SC 4.JPG" alt="Book Cover - The Last Kingdom">
+                        <img src=".//images/S.C/SC 4.JPG" alt="Book Cover - The Last Kingdom">
                     </div>
                     <div class="publication-info">
                         <span class="publication-type">Book</span>
@@ -727,7 +727,7 @@
                 <!-- Publication 5 -->
                 <div class="publication-card">
                     <div class="publication-cover">
-                        <img src="../images/S.C/SC 1.JPG" alt="Book Cover - Mountain Shadows">
+                        <img src=".//images/S.C/SC 1.JPG" alt="Book Cover - Mountain Shadows">
                     </div>
                     <div class="publication-info">
                         <span class="publication-type">Book</span>
@@ -744,7 +744,7 @@
                 <!-- Publication 6 -->
                 <div class="publication-card">
                     <div class="publication-cover">
-                        <img src="../images/S.C/SC 1.JPG" alt="Book Cover - AI Ethics Today">
+                        <img src=".//images/S.C/SC 1.JPG" alt="Book Cover - AI Ethics Today">
                     </div>
                     <div class="publication-info">
                         <span class="publication-type journal">Journal</span>
@@ -761,7 +761,7 @@
                 <!-- Publication 7 -->
                 <div class="publication-card">
                     <div class="publication-cover">
-                        <img src="../images/S.C/SC 4.JPG" alt="Book Cover - The Ocean's Whisper">
+                        <img src=".//images/S.C/SC 4.JPG" alt="Book Cover - The Ocean's Whisper">
                     </div>
                     <div class="publication-info">
                         <span class="publication-type">Book</span>
@@ -778,7 +778,7 @@
                 <!-- Publication 8 -->
                 <div class="publication-card">
                     <div class="publication-cover">
-                        <img src="../images/S.C/SC 4.JPG" alt="Book Cover - Economic Frontiers">
+                        <img src=".//images/S.C/SC 4.JPG" alt="Book Cover - Economic Frontiers">
                     </div>
                     <div class="publication-info">
                         <span class="publication-type journal">Journal</span>
@@ -798,7 +798,7 @@
                 <!-- List Item 1 -->
                 <div class="list-item">
                     <div class="list-cover">
-                        <img src="../images/S.C/SC 2.JPG" alt="Book Cover - The Silent Echo">
+                        <img src=".//images/S.C/SC 2.JPG" alt="Book Cover - The Silent Echo">
                     </div>
                     <div class="list-info">
                         <span class="publication-type">Book</span>
@@ -842,7 +842,7 @@
                 <!-- List Item 3 -->
                 <div class="list-item">
                     <div class="list-cover">
-                        <img src="../images/S.C/library-with-books.jpg" alt="Journal Cover - Quantum Theory Journal">
+                        <img src=".//images/S.C/library-with-books.jpg" alt="Journal Cover - Quantum Theory Journal">
                     </div>
                     <div class="list-info">
                         <span class="publication-type journal">Journal</span>
