--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('./../images/S.C/library-with-books.jpg') center/cover no-repeat;
+            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('.//images/S.C/library-with-books.jpg') center/cover no-repeat;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -881,7 +881,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="../images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
+                <img src="./images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
                 <h1>Shepherd Court Publishing</h1>
             </div>
             <div class="mobile-menu">☰</div>
@@ -924,7 +924,7 @@
                 <!-- Book 1 -->
                 <div class="book-card">
                     <div class="book-cover">
-                        <img src="../images/S.C/dynamics.jpg" alt="Book Cover - The Dynamic Of Life Storm">
+                        <img src=".//images/S.C/dynamics.jpg" alt="Book Cover - The Dynamic Of Life Storm">
                     </div>
                     <div class="book-info">
                         <h3>The Dynamics of Life Storm And Overcoming them</h3>
@@ -937,7 +937,7 @@
                 <!-- Book 2 -->
                 <div class="book-card">
                     <div class="book-cover">
-                        <img src="../images/S.C/SC 2.JPG" alt="Book Cover - Beyond the Horizon">
+                        <img src=".//images/S.C/SC 2.JPG" alt="Book Cover - Beyond the Horizon">
                     </div>
                     <div class="book-info">
                         <h3>Beyond the Horizon</h3>
@@ -950,7 +950,7 @@
                 <!-- Book 3 -->
                 <div class="book-card">
                     <div class="book-cover">
-                        <img src="../images/S.C/SC 4.JPG" alt="Book Cover - Quantum Theory Journal">
+                        <img src=".//images/S.C/SC 4.JPG" alt="Book Cover - Quantum Theory Journal">
                     </div>
                     <div class="book-info">
                         <h3>Quantum Theory Journal</h3>
@@ -963,7 +963,7 @@
                 <!-- Book 4 -->
                 <div class="book-card">
                     <div class="book-cover">
-                        <img src="../images/S.C/SC 2.JPG" alt="Book Cover - The Last Kingdom">
+                        <img src=".//images/S.C/SC 2.JPG" alt="Book Cover - The Last Kingdom">
                     </div>
                     <div class="book-info">
                         <h3>The Last Kingdom</h3>
