--- a/services.html
+++ b/services.html
@@ -197,7 +197,7 @@
         
         /* Page Banner */
         .page-banner {
-            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('./../images/S.C/library-with-books.jpg') center/cover no-repeat;
+            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('././/images/S.C/library-with-books.jpg') center/cover no-repeat;
             color: white;
             text-align: center;
             padding: 60px 0;
@@ -609,7 +609,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="../images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
+                <img src=".//images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
                 <h1>Shepherd Court Publishing</h1>
             </div>
             <div class="mobile-menu">☰</div>
