--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
         
         /* Page Banner */
         .page-banner {
-            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('./../images/S.C/library-with-books.jpg') center/cover no-repeat;
+            background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('././/images/S.C/library-with-books.jpg') center/cover no-repeat;
             color: white;
             text-align: center;
             padding: 60px 0;
@@ -674,7 +674,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="../images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
+                <img src="images/S.C/Sheperd court.jpg" alt="Shepherd Court Publishing Logo">
                 <h1>Shepherd Court Publishing</h1>
             </div>
             <div class="mobile-menu">☰</div>
@@ -711,7 +711,7 @@
                     <p>Today, Shepherd Court has grown into a respected independent publisher with over 500 titles across multiple genres. We've helped both first-time authors and established writers bring their stories to readers worldwide, maintaining our commitment to quality, integrity, and author-centric publishing every step of the way.</p>
                 </div>
                 <div class="about-image">
-                    <img src="../images/S.C/Pst. Victor.png alt="Victor Ashio">
+                    <img src=".//images/S.C/Pst. Victor.png alt="Victor Ashio">
                 </div>
             </div>
         </div>
@@ -750,7 +750,7 @@
                 <!-- Team Member 1 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="../images/S.C/Pst. Victor.png" alt="Victor Ashio">
+                        <img src=".//images/S.C/Pst. Victor.png" alt="Victor Ashio">
                     </div>
                     <div class="member-info">
                         <h3 class="member-name">Victor Ashio</h3>
@@ -766,7 +766,7 @@
                 <!-- Team Member 2 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="../images/S.C/Michael.png" alt="Michael Ashio">
+                        <img src=".//images/S.C/Michael.png" alt="Michael Ashio">
                     </div>
                     <div class="member-info">
                         <h3 class="member-name">Michael Victor-Ashio</h3>
@@ -782,7 +782,7 @@
                 <!-- Team Member 3 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="../images/S.C/Vicky.png" alt="vickie Ashio">
+                        <img src=".//images/S.C/Vicky.png" alt="vickie Ashio">
                     </div>
                     <div class="member-info">
                         <h3 class="member-name">Vickie Ashio</h3>
@@ -798,7 +798,7 @@
                 <!-- Team Member 4 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="../images/S.C/Michael.png" alt="Marvela">
+                        <img src=".//images/S.C/Michael.png" alt="Marvela">
                     </div>
                     <div class="member-info">
                         <h3 class="member-name">Marvela Ashio</h3>
@@ -814,7 +814,7 @@
                 <!-- Team Member 5 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="../images/S.C/Vicky.png" alt="Rebecca Martinez">
+                        <img src=".//images/S.C/Vicky.png" alt="Rebecca Martinez">
                     </div>
                     <div class="member-info">
                         <h3 class="member-name">Rebecca Martinez</h3>
@@ -830,7 +830,7 @@
                 <!-- Team Member 6 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="../images/S.C/ubong.jpg" alt="Ubong Emmanuel">
+                        <img src=".//images/S.C/ubong.jpg" alt="Ubong Emmanuel">
                     </div>
                     <div class="member-info">
                         <h3 class="member-name">Ubong Emmanuel</h3>
@@ -921,12 +921,12 @@
             </div>
             
             <div class="partners-grid">
-                <img src="/api/placeholder/150/80" alt="Partner Logo" class="partner-logo">
-                <img src="/api/placeholder/150/80" alt="Partner Logo" class="partner-logo">
-                <img src="/api/placeholder/150/80" alt="Partner Logo" class="partner-logo">
-                <img src="/api/placeholder/150/80" alt="Partner Logo" class="partner-logo">
-                <img src="/api/placeholder/150/80" alt="Partner Logo" class="partner-logo">
-                <img src="/api/placeholder/150/80" alt="Partner Logo" class="partner-logo">
+                <img src="./images/S.C/lff.jpg" alt="Partner Logo" class="partner-logo">
+                <img src="./images/S.C/petra.png" alt="Partner Logo" class="partner-logo">
+                <img src="./images/S.C/Sheperd court.jpg" alt="Partner Logo" class="partner-logo">
+                <img src="./images/S.C/lff.jpg" alt="Partner Logo" class="partner-logo">
+                <img src="./images/S.C/library-with-books.jpg" alt="Partner Logo" class="partner-logo">
+                <img src="./images/S.C/Sheperd court.jpg" alt="Partner Logo" class="partner-logo">
             </div>
         </div>
     </section>
@@ -943,9 +943,9 @@
                 <div class="testimonial-card">
                     <p class="testimonial-text">Working with Shepherd Court was transformative for my career. Their professional guidance and attention to detail made all the difference in bringing my vision to life. I'm now working on my third book with them and wouldn't consider going anywhere else.</p>
                     <div class="testimonial-author">
-                        <img src="/api/placeholder/60/60" alt="Author Photo">
+                        <img src="./images/S.C/Vicky.png" alt="Author Photo">
                         <div class="author-info">
-                            <p class="author-name">David Thompson</p>
+                            <p class="author-name">Vickie</p>
                             <p class="author-title">Author of "Mountain Shadows"</p>
                         </div>
                     </div>
